# AutoDPD

./: .gitignore  .pypirc  README.md  base_requirements.txt  environment.yml  pyproject.toml  setup.py
autodepend/: __init__.py
src/autodepend/: __init__.py  autodpd.py  cli.py
src/autodpd/: autodpd.py
