[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodepend"
version = "0.1.1"
authors = [
  { name="Dan Peng", email="dan.peng.1202@gmail.com" },
]
description = "Automatic Python dependency analyzer and environment generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "packaging",
    "requests",
    "pyyaml",
]

[project.scripts]
autodepend = "autodepend.__main__:main"

[project.urls]
"Homepage" = "https://github.com/greatdanpeng/autodepend"
"Bug Tracker" = "https://github.com/greatdanpeng/autodepend/issues" 